--- a/src/components/Featured.css
+++ b/src/components/Featured.css
@@ -1,7 +1,7 @@
 .box{
     background-color: #767748;
     width: 100%;
-    height: 20vh;
+    height: 23vh;
 }
 
 
@@ -185,18 +185,25 @@ margin-top: 20%;
   border-color: #0a121b !important;
 }
 
+.spa{
+    color: #49749F !important;
+}
+
+
+
 @media screen and (max-width: 480px) {
     .we{
-        font-size: 1.3rem;
+        font-size: 1.1rem;
         margin-left: 30px;
-        font-weight: 700;
+        font-weight: 600;
+    width: 70% !important;
      
     }
   
 
     .me{
         margin-left: 40px;
-       font-size: 1.1rem;
+       font-size: 0.9rem;
     }
 
     .guy img{
@@ -209,7 +216,7 @@ margin-top: 20%;
 
         .one1 h1{
      position: relative;
-     top: 110%;
+     top: 120%;
      left: -85%;
      width: 180% !important;
      font-size: 1.7rem;
@@ -221,7 +228,7 @@ margin-top: 20%;
         }
         .one1 p{
             position: relative;
-            top: 110%;
+            top: 120%;
             width: 180% !important;
             left: -90%;
         }
@@ -230,13 +237,13 @@ margin-top: 20%;
    width: 70% !important;
    height: 20% !important;
    position: relative;
-   top: 100%;
-   margin-left: -130%;
+   top: 85%;
+   margin-left: -110%;
         }
 
         .btn2{
             position: relative;
-            top: 115%;
+            top: 120%;
             left: -82%;
         }
 
@@ -247,20 +254,23 @@ margin-top: 20%;
 
 
         .two img{
-            margin-left: -500%;
+            /* margin-left: -530%; */
+            position: relative;
+            left: -210%;
             width: 80% !important;
             height: 20% !important;
-            margin-top: -770%;
+            margin-top: -1490%;
         }
 
         .one2 h1{
-            margin-left: 20%;
+            margin-left: 5%;
             width: 70% !important;
+            margin-top: 30%;
         }
 
         .one2 p{
-            width: 75% !important;
-            margin-left: 20%;
+            width: 90% !important;
+            margin-left: 5%;
         }
 
         .man img{
@@ -269,14 +279,14 @@ margin-top: 20%;
         }
 
         .btn3{
-            margin-left: 15%;
+            margin-left: 1%;
         }
 
         
 .one3 h1{
     position: relative;
     top: 90%;
-    width: 130% !important;
+    width: 210% !important;
     color: #181800;
     font-weight: 700;
     left: -100%;
@@ -293,7 +303,7 @@ margin-top: 20%;
 .btn4{
     position: relative;
     top: 90%;
-    margin-left: -130%;
+    margin-left: -120%;
 }
 
 
@@ -303,16 +313,16 @@ margin-top: 20%;
     background-color: transparent !important;
     width: 100% !important;
     height: 130% !important;
-  margin-top: 575%;
+  margin-top: 600%;
 }
 
 
 .vector-box{
     background-color: #292901;
     width: 100%;
-    height: 40vh;
+    height: 50vh;
    position: absolute;
-   top:410%;
+   top:430%;
 }
 
         
@@ -329,18 +339,29 @@ margin-top: 20%;
 
 .para{
     transform: translateY(100%);
-  width: 80%;
-  margin-left: 10%;
+  width: 90%;
+  margin-left: 6%;
 }
 
 .btn5{
     background-color: #49749F !important;
     border-color: #49749F !important;
     margin-left: 30%;
-    margin-top: 20%;
+    margin-top: 30%;
  
 
 }
+.spa{
+    color: #49749F !important;
+}
 
 
+
+.gari{
+    margin-top: -10% !important;
+}
+
+.milo{
+    margin-top: -40% !important;
+}
 }
