--- a/src/components/Featured.css
+++ b/src/components/Featured.css
@@ -1,7 +1,7 @@
 .box{
     background-color: #767748;
     width: 100%;
-    height: 23vh;
+    height: 21vh;
 }
 
 
@@ -142,7 +142,9 @@ margin-top: 20%;
     background-color: transparent !important;
     width: 100% !important;
     height: 130% !important;
-  margin-top: 125%;
+ margin-top: 105rem;
+ /* position: absolute;
+ top: 340%; */
 }
 
 .vector-box{
@@ -313,7 +315,7 @@ margin-top: 20%;
     background-color: transparent !important;
     width: 100% !important;
     height: 130% !important;
-  margin-top: 600%;
+  margin-top: 120rem;
 }
 
 
