--- a/src/components/Featured.css
+++ b/src/components/Featured.css
@@ -1,58 +1,48 @@
-.box{
-    background-color: #767748;
-    width: 100%;
-    height: 21vh;
+.box {
+  background-color: #767748;
+  width: 100%;
+  height: 21vh;
 }
 
-
-p{
-    line-height: 1.7rem;
+p {
+  line-height: 1.7rem;
 }
 
+.we {
+  color: white;
+  font-size: 2.5rem;
 
-.we{
-    color: white;
-    font-size: 2.5rem;
-  
-    margin-left: 25%;
-    margin-top: 10px;
-    font-weight: 600;
-    font-family: 'Poppins', sans-serif;
-   
+  margin-left: 25%;
+  margin-top: 10px;
+  font-weight: 600;
+  font-family: "Poppins", sans-serif;
 }
 
-.me{
-    color: white;
-    font-size: 1.2rem;
-    margin-top: 10px;
-    margin-left: 30%;
-    font-family: 'Poppins', sans-serif;
-    
+.me {
+  color: white;
+  font-size: 1.2rem;
+  margin-top: 10px;
+  margin-left: 30%;
+  font-family: "Poppins", sans-serif;
 }
 
-.guy img{
-margin-top: 20%;
-    background-color: transparent !important;
-    width: 130% !important;
-    height: 90% !important;
-
+.guy img {
+  margin-top: 20%;
+  background-color: transparent !important;
+  width: 80% !important;
+  height: 80% !important;
 }
 
-
-
-
-.one img{
-    width: 15% !important;
-    height: 15% !important;
-    background-color: transparent !important;
-    margin-top: 25%;
-    margin-left: 70%;
-
+.one img {
+  width: 15% !important;
+  height: 15% !important;
+  background-color: transparent !important;
+  margin-top: 25%;
+  margin-left: 70%;
 }
 
-.one1{
-    margin-top: 10%;
-   
+.one1 {
+  margin-top: 10%;
 }
 
 /* .one2 h1 {
@@ -60,356 +50,290 @@ margin-top: 20%;
     margin-left: 15%;
 } */
 
-
-.one1 h1{
-    margin-left: -10%;
-    margin-top: -5%;
-    font-size: 2.3rem;
-    font-weight: 700;
-    width: 100% !important;
-    color: #181800;
+.one1 h1 {
+  margin-left: 10%;
+  margin-top: -5%;
+  font-size: 2.3rem;
+  font-weight: 700;
+  width: 100% !important;
+  color: #181800;
 }
 
-.one1 p{
-    width: 98%;
-    margin-left: -10%;
-    margin-top: 3%;
-    color: rgb(68, 66, 66);
-
+.one1 p {
+  width: 70%;
+  margin-left: 10%;
+  margin-top: 3%;
+  color: rgb(68, 66, 66);
 }
 
-
-.btn2{
-    margin-left: -27% !important;
-    
+.btn2 {
+  margin-left: -2% !important;
 }
 
-
-.man img{
-    background-color: transparent !important;
-  
+.man img {
+  background-color: transparent !important;
 }
 
-
-.one2 img{
-    background-color: transparent !important;
-    width: 5% !important;
-    height: 12% !important;
+.one2 img {
+  background-color: transparent !important;
+  width: 5% !important;
+  height: 12% !important;
   position: absolute;
   top: 220%;
   left: 90px;
-   
-
 }
-
 
 /* .one2{
     margin-top: 15%;
     margin-left: 5%;
 } */
 
-.one2 h1{
-    width: 100% !important;
-    color: #181800;
-    font-weight: 700;
-    margin-top: 30%;
-    margin-left: 15%;
-
+.one2 h1 {
+  width: 100% !important;
+  color: #181800;
+  font-weight: 700;
+  margin-top: 30%;
+  margin-left: 15%;
 }
 
-
-.one2 p{
-    margin-left: 15%;
-    width: 65% !important;
-    color: rgb(68, 66, 66);
-
-
+.one2 p {
+  margin-left: 15%;
+  width: 65% !important;
+  color: rgb(68, 66, 66);
 }
 
-.man img{
-    margin-left: 10%;
-    margin-top: 30%;
+.man img {
+  margin-left: 10%;
+  margin-top: 30%;
 }
 
-.btn3{
- margin-left: 4%;
+.btn3 {
+  margin-left: 4%;
 }
 
-
-
-.one3 h1{
-   margin-top: 30%;
-   margin-left: -10%;
-    width: 130% !important;
-    color: #181800;
-    font-weight: 700;
-    left: -10%;
-    font-size: 2.3rem;
+.one3 h1 {
+  margin-top: 30%;
+  margin-left: 10%;
+  width: 100% !important;
+  color: #181800;
+  font-weight: 700;
+  left: -10%;
+  font-size: 2.3rem;
 }
 
-
-.one3 p{
+.one3 p {
   margin-top: 6%;
-    margin-left: -10%;
-    width: 98%;
-    color: rgb(68, 66, 66);
-
-
+  margin-left: 10%;
+  width: 70%;
+  color: rgb(68, 66, 66);
 }
 
-.btn4{
-   position: relative;
-   left: -26%;
+.vector img {
+  background-color: transparent !important;
+  width: 100% !important;
+  height: 130% !important;
+  transform: translateY(60%);
 }
 
-
-.vector img{
-    background-color: transparent !important;
-    width: 100% !important;
-    height: 130% !important;
-    transform: translateY(60%);
+.vector-box {
+  background-color: #292901;
+  width: 100%;
+  height: 35vh;
+  margin-top: 10%;
 }
 
-.vector-box{
-    background-color: #292901;
-    width: 100%;
-    height: 30vh;
-    margin-top: 10%;
-
+.support {
+  color: white;
+  font-size: 4rem;
+  font-weight: 700;
+  margin-left: 35%;
+  transform: translateY(-80%);
 }
 
-
-.support{
-    color: white;
-    font-size: 4rem;
-    font-weight: 700;
-    margin-left: 35%;
-   transform: translateY(-80%);
-    
+.para {
+  color: white;
+  width: 30%;
+  font-weight: 400;
+  margin-left: 35%;
+  transform: translateY(-80%);
 }
 
-.para{
-    color: white;
-    width: 30%;
-    font-weight: 400;
-    margin-left: 35%;
-    transform: translateY(-80%);
-
+.milo {
+  margin-top: 100px !important;
 }
 
-.milo{
-    margin-top: 100px !important;
+.btn5 {
+  background-color: #49749f !important;
+  border-color: #49749f !important;
+  margin-left: 40%;
 }
 
-.btn5{
-    background-color: #49749F !important;
-    border-color: #49749F !important;
-    margin-left: 40%;
-    
-
-}
-
-.btn5:hover{
-    background-color: #0a121b !important;
+.btn5:hover {
+  background-color: #0a121b !important;
   border-color: #0a121b !important;
 }
 
-.spa{
-    color: #49749F !important;
+.spa {
+  color: #49749f !important;
 }
-
-
-
 
 /* STYLES FOR MOBILE SCREENS */
 
 @media screen and (max-width: 480px) {
-    .we{
-        font-size: 1.1rem;
-        margin-left: 30px;
-        font-weight: 600;
+  .we {
+    font-size: 1.1rem;
+    margin-left: 30px;
+    font-weight: 600;
     width: 70% !important;
-     
-    }
-  
+  }
 
-    .me{
-        margin-left: 40px;
-       font-size: 0.9rem;
-    }
+  .me {
+    margin-left: 40px;
+    font-size: 0.9rem;
+  }
 
-    .guy img{
-        margin-top: 100%;
-            background-color: transparent !important;
-            width: 400% !important;
-            height: 70% !important;
-            margin-left: 10%;
-        }
+  .guy img {
+    margin-top: 100%;
+    background-color: transparent !important;
+    width: 150% !important;
+    height: 100% !important;
+    margin-left: 10%;
+  }
 
-       .guy img{
-           margin-top: 30px;
-       }
-         
-        .one1 h1{
-     position: relative;
-     top: 120%;
-     left: -140%;
-     width: 180% !important;
-     font-size: 1.7rem;
-        }
+  .guy img {
+    margin-top: 30px;
+  }
 
+  .one1 h1 {
+    transform: translateY(800%);
+    margin-top: 10%;
+    margin-left: -100%;
+    width: 180% !important;
+    font-size: 1.7rem;
+  }
 
-        .one1{
-            width: 100% !important;
-        }
-        .one1 p{
-            position: relative;
-            top: 120%;
-            width: 250% !important;
-            left: -140%;
-            color: rgb(68, 66, 66);
+  .one1 p {
+    width: 200% !important;
+    color: rgb(68, 66, 66);
+    transform: translateY(200%);
+    margin-left: -100%;
+  }
 
-        }
-
-        .one img{
-   width: 70% !important;
-   height: 20% !important;
-   position: relative;
-   top: 85%;
-   margin-left: -110%;
-        }
-
-        .btn2{
-       /* transform: translateY(1000%);
-       margin-left: -110% !important; */
-       position: relative;
-       top: 115%;
-       left: -130%;
-        }
-
-
-    
-        .one2 img{
-            width: 15% !important;
-            height: 15% !important;
-            position: relative;
-            top: 190%;
-            left: 15px;
-        }
-
-        .one2 h1{
-          position: relative;
-          top: 165%;
-        width: 70% !important;
-        left: -15%;
-          
-        }
-
-        .one2 p{
-            width: 100% !important;
-            left: -15%;
-            position: relative;
-            top: 165%;
-            color: rgb(68, 66, 66);
-
-        }
-
-        .man img{
-            margin-left: 10%;
-            margin-top: -10%;
-        
-        }
-
-        .btn3{
-            position: relative;
-            top: 165%;
-            left: -7%;
-        }
-
-        
-.one3 h1{
+  .one img {
+    width: 70% !important;
+    height: 20% !important;
     position: relative;
-    top: 210%;
+    top: 85%;
+    margin-left: -110%;
+  }
+
+  .btn2 {
+    transform: translateY(700%);
+    margin-left: -100% !important;
+  }
+
+  /* .one2 img {
+    width: 15% !important;
+    height: 15% !important;
+    position: relative;
+    top: 190%;
+    left: 15px;
+  } */
+
+  .one2 h1 {
+    position: relative;
+    top: 165%;
+    width: 70% !important;
+    left: -15%;
+  }
+
+  .one2 p {
+    width: 100% !important;
+    left: -15%;
+    position: relative;
+    top: 165%;
+    color: rgb(68, 66, 66);
+  }
+
+  .man img {
+    margin-left: 8%;
+    margin-top: -10%;
+  }
+
+  .btn3 {
+    position: relative;
+    top: 165%;
+    left: -7%;
+  }
+
+  .one3 h1 {
+    transform: translateY(2000%) !important;
     width: 210% !important;
     color: #181800;
     font-weight: 700;
-    left: -160%;
+    margin-left: -110%;
     font-size: 1.5rem;
-}
+  }
 
-.one3 p{
-    margin-left: -170%;
-    position: relative;
-    top: 210%;
-    width: 250% !important;
+  .one3 p {
+    margin-left: -110% !important;
+    transform: translateY(420%) !important;
+
+    width: 200% !important;
     color: rgb(68, 66, 66);
+  }
 
-}
+  .btn4 {
+    transform: translateY(1550%);
+    margin-left: -110%;
+  }
 
- .btn4{
-  transform: translateY(1780%);
-  margin-left: -145%;
-  
-} 
-
-
-
-.vector img{
+  .vector img {
     background-color: transparent !important;
     width: 100% !important;
     height: 130% !important;
     transform: translateY(860%);
-}
+  }
 
-
-.vector-box{
+  .vector-box {
     background-color: #292901;
     width: 100%;
     height: 50vh;
 
     margin-top: 170%;
+  }
 
-}
-
-        
-.support{
-
+  .support {
     font-size: 2rem;
     margin-left: 35%;
-   transform: translateY(150%);
-   margin-left: 20%;
-   font-weight: 700;
- 
-    
-}
+    transform: translateY(150%);
+    margin-left: 20%;
+    font-weight: 700;
+  }
 
-.para{
+  .para {
     transform: translateY(100%);
-  width: 90%;
-  margin-left: 6%;
-}
+    width: 90%;
+    margin-left: 6%;
+  }
 
-.btn5{
-    background-color: #49749F !important;
-    border-color: #49749F !important;
+  .btn5 {
+    background-color: #49749f !important;
+    border-color: #49749f !important;
     margin-left: 30%;
     margin-top: 30%;
- 
+  }
+  .spa {
+    color: #49749f !important;
+  }
 
-}
-.spa{
-    color: #49749F !important;
-}
+  .gari {
+    position: relative !important;
+    top: 110% !important;
+  }
 
-
-
-.gari{
-   position: relative !important;
-top: 110% !important;
-}
-
-.milo{
-   position: relative !important;
-   top: 165% !important;
-}
+  .milo {
+    position: relative !important;
+    top: 165% !important;
+  }
 }
